--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-mongoURL = mongodb+srv://raviteja1996:Raviteja@7719@test-cluster.t7ooofa.mongodb.net/contactScheduler?retryWrites=true&w=majority
+mongoURL = mongodb+srv://raviteja1996:Raviteja7719@test-cluster.t7ooofa.mongodb.net/contactScheduler?retryWrites=true&w=majority
 PORT = 4500
